--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ChartActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".TextureActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
