openGL 4:openGL方式实现相机预览

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
         <activity
             android:name=".TextureActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".CameraOpenGLActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
