openGL 6:光照效果提交（光照效果公式都是固定的）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name=".FBOActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".LightActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
