openGL 7:相机滤镜提交

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name=".LightActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".CameraFilterActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
